# CosmosFM-Qt

./: .gitignore  BatteryStatus.desktop  BatteryStatus_harmattan.desktop  CMakeLists.txt  CosmosFM.loc  CosmosFM.pro  CosmosFM.rss  CosmosFM_0xE0882321.mmp  CosmosFM_installer.pkg  CosmosFM_reg.rss  CosmosFM_template.pkg  README.md  bld.inf
qml/CosmosFM/: LoginPage.qml  MainPage.qml  SettingsPage.qml  main.qml  main_desktop.qml
scripts/: build_sim.ps1  build_symbian.ps1  inspect_sim_runtime.ps1  package_selfsigned.ps1  runOutOfBattery.qs  stage_sim_runtime.ps1  test_tls.ps1
src/: api.h  client.cpp  client.h  main.cpp  user.cpp  user.h
tests/tlscheck/: main.cpp
